--- a/style.css
+++ b/style.css
@@ -5,9 +5,34 @@
 body {
 	font-size: var(--root-size);
 	font-family:Arial, sans-serif;
+	color: black;
 }
 @media (min-width: 600px) {
 	:root {
 	--root-size: 46px;
 }
+}
+header {
+	background-color: #FFC72C;
+	padding: 4%;
+	padding-left: 14%;
+	font-family: "Libre Franklin", sans-serif;
+	display: flex;
+	
+}
+h1 {
+	font-size: 32px;
+	font-weight: bold;
+}
+h2 {
+	font-size: 48px;
+	font-weight: bolder;
+}
+#author {
+	font-size: 18px;
+	padding-left: 2%;
+	margin-left: 10%;
+	border-color: black;
+	border-left: 2px solid
+	
 }
