--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
 }
 body {
 	font-size: var(--root-size);
-	font-family:"Libre Franklin", sans-serif;
+	font-family: "Libre Baskerville", serif;
 	color: black;
+}
+p not(:first-child){
+	line-height: 170%;
+	margin-bottom: 5%;
 }
 
 header {
@@ -31,4 +35,14 @@ h2 {
 	border-color: black;
 	border-left: 2px solid
 	
+}
+h3 {
+	font-family: "Libre Franklin", sans-serif;
+	font-weight: bold;
+	font-size: 24px;
+	margin-bottom: 2%;
+}
+section {
+	margin-top: 5%;
+	margin-left: 4%;
 }
