--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ header {
 	padding-left: 6%;
 	font-family: "Libre Franklin", sans-serif;
 }
+#redtext {
+	color: #C1261A;
+}
 h1 {
 	font-size: 19px;
 	font-weight: bold;
