--- a/style.css
+++ b/style.css
@@ -26,20 +26,22 @@ header {
 	z-index: 1;
 	
 }
-.navigation {
+ul {
 	background-color: white;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
 	font-family: "Libre Franklin", sans-serif;
 	font-weight: bold;
 	font-size: 17px;
 	padding: 5%;
-	padding-right: 20%;
+	display: flex;
+	flex-direction: row;
 	position: absolute;
 	z-index: 0;
 	position: fixed;
 	
+}
+
+li:not(:first-child) {
+	padding-left: 7%;
 }
 #redtext {
 	color: #C1261A;
