--- a/style.css
+++ b/style.css
@@ -27,11 +27,10 @@ header {
 	
 }
 ul {
-	background-color: white;
+	color: rgb(0, 0, 0);
 	font-family: "Libre Franklin", sans-serif;
-	font-weight: bold;
-	font-size: 17px;
-	padding: 5%;
+	font-weight:600;
+	font-size: 16px;
 	display: flex;
 	flex-direction: row;
 	position: absolute;
@@ -40,8 +39,19 @@ ul {
 	
 }
 
+li {
+	background-color: #FFC72C;
+	padding: 5%;
+}
+
 li:not(:first-child) {
-	padding-left: 7%;
+	padding-left: 2%;
+}
+li:nth-child(5) {
+	padding-right: 6%;
+}
+#arrow {
+	color: #C1261A;
 }
 #redtext {
 	color: #C1261A;
