--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 p {
 	line-height: 170%;
-	margin-top: 5%;
+	margin-top: 8%;
 }
 
 sup {
@@ -19,7 +19,7 @@ header {
 	background-color: #FFC72C;
 	padding-top: 8%;
 	padding-bottom: 8%;
-	padding-left: 6%;
+	padding-left: 3%;
 	font-family: "Libre Franklin", sans-serif;
 	position: relative;
 	z-index: 1;
@@ -56,11 +56,11 @@ li:nth-child(6) {
 	color: #C1261A;
 }
 h1 {
-	font-size: 19px;
+	font-size: 18px;
 	font-weight: bold;
 }
 h2 {
-	font-size: 40px;
+	font-size: 38px;
 	font-weight: bolder;
 }
 .author {
@@ -80,7 +80,7 @@ h3 {
 }
 section {
 	margin-top: 5%;
-	margin-left: 4%;
+	margin-left: 2%;
 	margin-bottom: 10%;
 }
 article {
@@ -92,9 +92,10 @@ article {
 	font-size: 20px;
 	font-family: "Public Sans", sans-serif;
 	font-weight:500;
+	line-height: 150%;
 }
 .bigtextitalic {
-	padding: 2%;
+	padding: 1%;
 	font-size: 18px;
 	font-family: "Public Sans", sans-serif;
 	font-weight:500;
