--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
+ /* variables */
 :root {
 	--root-size: 16px;
+	--root-margin: 4%;
+	 /* Header */
+	--header-padding-top: 8%;
+	--header-padding-left: 3%;
+	--h3-margin-bottom: 2%;
+	--div-author-margin-top: 10%;
+	--div-author-padding-left: 2%;
+	/* article section */
+	--p-line-height: 170%;
+	--p-margin-top: 8%;
+	--section-margin-top: 5%;
+	--section-margin-bottom: 10%;
+	--bigtext-font-size: 20px;
+	--bigtextitalic-font-size: 18px;
+	--bigtextitalic-padding: 1%;
+
 }
 
 @media (min-width:1100px) {
@@ -20,7 +37,7 @@
 	z-index: 1;
 }
 h1 {
-	font-size: 18px;
+	font-size: calc(var(--root-size) * 1.25);
 	font-weight: bold;
 }
 h2 {
@@ -54,7 +71,7 @@ p {
 h3 {
 	font-family: "Libre Franklin", sans-serif;
 	font-weight: bold;
-	font-size: 26px;
+	font-size: calc(var(--root-size) * 1.75);
 	margin-bottom: 2%;
 }
 section {
