--- a/style.css
+++ b/style.css
@@ -37,9 +37,9 @@
  /* Header section */
  header {
 	background-color: #FFC72C;
-	padding-top: 8%;
-	padding-bottom: 8%;
-	padding-left: 3%;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	padding-left: 15px;
 	font-family: "Libre Franklin", sans-serif;
 	position: relative;
 	z-index: 1;
@@ -57,8 +57,8 @@ h2 {
 }
 .author {
 	font-size: 18px;
-	margin-top: 10%;
-	padding-left: 2%;
+	margin-top: 10px;
+	padding-left: 10px;
 	border-color: black;
 	border-left: 2px solid
 }
@@ -69,22 +69,22 @@ body {
 	color: black;
 }
 article {
-	padding-bottom: 30%;
-	margin: 4%;
+	padding-bottom: 30px;
+	margin: 15px;
 }
 p {
 	line-height: 170%;
-	margin-top: 8%;
+	margin-top: 30px;
 }
 h3 {
 	font-family: "Libre Franklin", sans-serif;
 	font-weight: bold;
 	font-size: calc(var(--root-size) * 1.75);
-	margin-bottom: 2%;
+	margin-bottom: 3px;
 }
 section {
-	margin-top: 5%;
-	margin-bottom: 10%;
+	margin-top: 3px;
+	margin-bottom: 40px;
 }
 .bigtext {
 	font-size: 20px;
@@ -93,7 +93,7 @@ section {
 	line-height: 150%;
 }
 .bigtextitalic {
-	padding: 1%;
+	padding: 5px;
 	font-size: 18px;
 	font-family: "Public Sans", sans-serif;
 	font-weight:500;
@@ -106,8 +106,8 @@ sup {
 	font-size: 15px;
 	font-family: "Public Sans", sans-serif;
 	font-style: italic;
-	padding-right: 4%;
-	margin-right: 2%;
+	padding-right: 10px;
+	margin-right: 5px;
 	border-right: #FFC72C;
 	border-width: 2px;
 	border-right-style: solid;
@@ -128,9 +128,9 @@ mark {
 	left: 0%;
 	right: 0%;
 	justify-content: space-evenly;
-	padding: 4%;
-	padding-left: 0%;
-	padding-right: 0%;
+	padding:20px;
+	padding-left: 0px;
+	padding-right: 0px;
 	flex-direction: row;
 	position: absolute;
 	z-index: 0;
@@ -144,14 +144,14 @@ mark {
  /* Link to original article and footer section */
 #originalarticle {
 	color: #C1261A;
-	margin: 2%;
+	margin: 5px;
 }
 footer {
 	background-color: #FFC72C;
 	text-align: center;
 	font-size: 15px;
-	padding: 7%;
-	padding-bottom: 15%;
+	padding: 30px;
+	padding-bottom: 40px;
 	font-family: "Libre Franklin", sans-serif;
 	font-weight: 600;
 }
