--- a/style.css
+++ b/style.css
@@ -25,32 +25,29 @@
 
 @media (min-width:1100px) {
 	:root {
-		--root-size: 18px; }
+		--root-size: 17px; }
 	header {
-		padding-left: 10%;
 		display: flex;
 		justify-content: space-evenly;
-		
-		
 	}
 	.mainheader {
-		margin-left: -8%;
+		margin-left: -6%;
 		background-color: #FFC72C;
 	}
 	.title {
 		max-width: 45%;
 	}
 	.normal {
-		max-width: 55%;
-		margin-left: 9%;
+		max-width: 50%;
+		margin-left: 10.5%;
 	} 
 	.bigtext {
-		max-width: 55%;
-		margin-left: 9%;
+		max-width: 50%;
+		margin-left: 10.5%;
 	}
 	.bigtextitalic {
-		max-width: 55%;
-		margin-left: 9%;
+		max-width: 50%;
+		margin-left: 10.5%;
 	}
 	.citationbox {
 		display: flex;
@@ -60,13 +57,13 @@
 
 	}
 	.citationparagraph {
-		max-width: 55%;
+		max-width: 50%;
 	}
 	.citation {
 		max-width: 30ch;
 	}
 	h3 {
-		margin-left: 9%;
+		margin-left: 10.5%;
 	}
 
 }
@@ -123,14 +120,14 @@ section {
 	margin-bottom: 40px;
 }
 .bigtext {
-	font-size: 20px;
+	font-size: calc(var(--root-size) * 1.6);
 	font-family: "Public Sans", sans-serif;
 	font-weight:500;
 	line-height: 150%;
 }
 .bigtextitalic {
 	padding: 5px;
-	font-size: 18px;
+	font-size: calc(var(--root-size) * 1.3);
 	font-family: "Public Sans", sans-serif;
 	font-weight:500;
 	font-style: italic;
