--- a/style.css
+++ b/style.css
@@ -7,20 +7,6 @@
 	--header-padding-top: 30px;
 	--header-padding-bottom: 30px;
 	--div-author-padding-left: 10px;
-	/* article section */
-	--p-line-height: 170%;
-	--bigtext-font-size: 20px;
-	--bigtextitalic-font-size: 18px;
-	--bigtextitalic-padding: 5px; 
-	/* citation */
-	--citation-font-size: 15px;
-	--citation-padding-right: 10px;
-	--citation-margin-right: 5px;
-	/* navigation */
-	--flex-container-padding: 20px;
-	--flex-container-padding-left: 0px;
-	--flex-container-padding-right: 0px;
-
 }
 
 @media (min-width:1100px) {
@@ -65,7 +51,10 @@
 	h3 {
 		margin-left: 10.5%;
 	}
-
+	#originalarticle {
+		text-align: center;
+		display: block;
+	}
 }
  /* Header section */
  header {
@@ -102,6 +91,7 @@ body {
 	color: black;
 }
 article {
+	padding-top: 2%;
 	padding-bottom: 30px;
 	margin: 15px;
 }
@@ -120,7 +110,7 @@ section {
 	margin-bottom: 40px;
 }
 .bigtext {
-	font-size: calc(var(--root-size) * 1.6);
+	font-size: calc(var(--root-size) * 1.4);
 	font-family: "Public Sans", sans-serif;
 	font-weight:500;
 	line-height: 150%;
