--- a/style.css
+++ b/style.css
@@ -2,26 +2,23 @@
 :root {
 	--root-size: 16px;
 	--article-margin: 15px;
-	 /* Header */
-	--header-padding-left: 15px;
-	--header-padding-top: 30px;
-	--header-padding-bottom: 30px;
-	--div-author-padding-left: 10px;
+	--padding-top: 30px;
+	--padding-bottom: 30px;
+	--padding-left: 5.25px;
 }
 
 @media (min-width:1100px) {
 	:root {
 		--root-size: 17px; }
 	header {
-		display: flex;
-		justify-content: space-evenly;
-	}
-	.mainheader {
-		margin-left: -6%;
-		background-color: #FFC72C;
+		display: grid;
+		grid-template-columns: 2fr 1fr;
+		width: 100%;
+		justify-items: center;
+		
 	}
 	.title {
-		max-width: 45%;
+		max-width: 70%;
 	}
 	.normal {
 		max-width: 50%;
@@ -59,9 +56,9 @@
  /* Header section */
  header {
 	background-color: #FFC72C;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	padding-left: 15px;
+	padding-top: calc(var(--padding-top) * 2.2);
+	padding-bottom: calc(var(--padding-bottom) * 2.2);
+	padding-left: calc(var(--padding-left) * 2);
 	font-family: "Libre Franklin", sans-serif;
 	position: relative;
 	z-index: 1;
@@ -69,6 +66,7 @@
 h1 {
 	font-size: calc(var(--root-size) * 1.25);
 	font-weight: bold;
+	margin-bottom: 2%;
 }
 h2 {
 	font-size: calc(var(--root-size) * 2.5);
@@ -80,7 +78,7 @@ h2 {
 .author {
 	font-size: 18px;
 	margin-top: 10px;
-	padding-left: 10px;
+	padding-left: 20px;
 	border-color: black;
 	border-left: 2px solid
 }
