--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 		grid-template-columns: 2fr 1fr;
 		width: 100%;
 		justify-items: center;
-		
 	}
 	.title {
 		max-width: 70%;
@@ -28,22 +27,27 @@
 		max-width: 50%;
 		margin-left: 10.5%;
 	}
+	.bigtext2 {
+		max-width: 72%;
+		margin-left: 15.5%;
+	}
 	.bigtextitalic {
 		max-width: 50%;
 		margin-left: 10.5%;
 	}
 	.citationbox {
-		display: flex;
+		display: grid;
+		grid-template-columns: 2fr 1fr;
 		max-width: 100%;
 		align-items: start;
 		justify-content: space-evenly;
-
 	}
 	.citationparagraph {
-		max-width: 50%;
+		max-width: 75%;
+		margin-left: 15.5%;
 	}
 	.citation {
-		max-width: 30ch;
+		max-width: 40ch;
 	}
 	h3 {
 		margin-left: 10.5%;
@@ -104,10 +108,16 @@ h3 {
 	margin-bottom: 3px;
 }
 section {
-	margin-top: 3px;
-	margin-bottom: 40px;
+	margin-top: 20px;
+	margin-bottom: 70px;
 }
 .bigtext {
+	font-size: calc(var(--root-size) * 1.4);
+	font-family: "Public Sans", sans-serif;
+	font-weight:500;
+	line-height: 150%;
+}
+.bigtext2 {
 	font-size: calc(var(--root-size) * 1.4);
 	font-family: "Public Sans", sans-serif;
 	font-weight:500;
@@ -122,9 +132,10 @@ section {
 }
 sup {
 	color: #FFC72C;
+	line-height: 0%;
 }
 .citation {
-	font-size: 15px;
+	font-size: 14px;
 	font-family: "Public Sans", sans-serif;
 	font-style: italic;
 	padding-right: 10px;
@@ -136,12 +147,15 @@ sup {
 mark {
 	background-color: #FFC72C;
 }
+button:active {
+	color: #C1261A;
+}
 
  /* Navigation bar's styling */
 
 .flex-container {
 	color: rgb(0, 0, 0);
-	background-color: #FFC72C;
+	background-color: #f8ba0e;
 	font-family: "Libre Franklin", sans-serif;
 	font-weight:600;
 	font-size: 16px;
@@ -161,6 +175,7 @@ mark {
 #arrow {
 	color: #C1261A;
 }
+
 
  /* Link to original article and footer section */
 #originalarticle {
