size fix for h3

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  /* variables */
 :root {
-	--root-size: 15px;
+	--root-size: 16px;
 	--article-margin: 15px;
 	--padding-top: 20px;
 	--padding-bottom: 20px;
@@ -51,6 +51,7 @@
 	}
 	h3 {
 		margin-left: 10.5%;
+		max-width: 40%;
 	}
 	#originalarticle {
 		text-align: center;
@@ -104,7 +105,7 @@ p {
 h3 {
 	font-family: "Libre Franklin", sans-serif;
 	font-weight: bold;
-	font-size: calc(var(--root-size) * 1.75);
+	font-size: calc(var(--root-size) * 1.9);
 	margin-bottom: 3px;
 }
 section {
