--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
  /* variables */
 :root {
 	--root-size: 16px;
+	--root-h2-size: 16px;
 	--article-margin: 15px;
 	--padding-top: 20px;
 	--padding-bottom: 20px;
 	--padding-left: 5.25px;
+	--line-height: 140%; 
 }
 
 @media (min-width:1100px) {
 	:root {
-		--root-size: 17px; }
+		--root-size: 17px;
+		--padding-bottom: 40px;
+		--root-h2-size: 22px;
+		--padding-left: 55px;
+		--line-height: 135%;  }
 	header {
 		display: grid;
 		grid-template-columns: 2fr 1fr;
@@ -17,7 +23,7 @@
 		justify-items: center;
 	}
 	.title {
-		max-width: 70%;
+		max-width: 70ch;
 	}
 	.normal {
 		max-width: 50%;
@@ -57,6 +63,9 @@
 		text-align: center;
 		display: block;
 	}
+	h1 {
+		line-height: 0%;
+	}
 }
  /* Header section */
  header {
@@ -69,20 +78,22 @@
 	z-index: 1;
 }
 h1 {
-	font-size: calc(var(--root-size) * 1.25);
+	color: #282620;
+	font-size: calc(var(--root-size) * 1.8);
 	font-weight: bold;
-	margin-bottom: 2%;
+	line-height: 145%;
 }
 h2 {
-	font-size: calc(var(--root-size) * 2.5);
+	font-size: calc(var(--root-h2-size) * 3);
 	font-weight: bolder;
+	line-height: var(--line-height)
 }
 #redtext {
 	color: #C1261A;
 }
 .author {
-	font-size: 18px;
-	margin-top: 10px;
+	font-size: 20px;
+	margin-top: 70px;
 	padding-left: 20px;
 	border-color: black;
 	border-left: 2px solid
@@ -103,7 +114,7 @@ p {
 	margin-top: 30px;
 }
 h3 {
-	font-family: "Libre Franklin", sans-serif;
+	font-family:  "Libre Baskerville", serif;
 	font-weight: bold;
 	font-size: calc(var(--root-size) * 1.9);
 	margin-bottom: 3px;
