--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 	--root-size: 16px;
 	--root-h2-size: 16px;
 	--article-margin: 15px;
-	--padding-top: 20px;
+	--padding-top: 26px;
 	--padding-bottom: 20px;
 	--padding-left: 5.25px;
 	--line-height: 140%; 
@@ -63,13 +63,11 @@
 		text-align: center;
 		display: block;
 	}
-	h1 {
-		line-height: 0%;
-	}
 }
  /* Header section */
  header {
 	background-color: #FFC72C;
+	color: #130e07;
 	padding-top: calc(var(--padding-top) * 2.2);
 	padding-bottom: calc(var(--padding-bottom) * 2.2);
 	padding-left: calc(var(--padding-left) * 2);
@@ -82,9 +80,10 @@ h1 {
 	font-size: calc(var(--root-size) * 1.8);
 	font-weight: bold;
 	line-height: 145%;
+	margin-bottom: 1%;
 }
 h2 {
-	font-size: calc(var(--root-h2-size) * 3);
+	font-size: calc(var(--root-h2-size) * 2.8);
 	font-weight: bolder;
 	line-height: var(--line-height)
 }
@@ -93,7 +92,7 @@ h2 {
 }
 .author {
 	font-size: 20px;
-	margin-top: 70px;
+	margin-top: 72px;
 	padding-left: 20px;
 	border-color: black;
 	border-left: 2px solid
