--- a/style.css
+++ b/style.css
@@ -14,13 +14,14 @@
 	--flex-container-padding-right: 1px;
 	--article-margin: 15px;
 	--padding-top: 26px;
-	--padding-links-right: 0px;
+	--padding-links-right: 1px;
 	--padding-top-footer: 20px;
 	--padding-bottom: 20px;
 	--padding-bottom-header: 20px;
 	--padding-left: 5.25px;
 	--line-height: 140%; 
 	--margin-right-link: 10px;
+	--margin-left-links: 10px;
 	--margin-top-author: 35px;
 
 	
@@ -38,8 +39,7 @@
 		--header-background-color:none; 
 		--footer-background-color: none;
 		--margin-top-author: 15px;
-		--footer-font-size: 10px;
-		--footer-color:var(--footer-background-color)
+		--footer-font-size: 8px;
 	}
 	body {
   padding: 6px;
@@ -50,7 +50,7 @@
 	max-width: 55ch;
 }
 #originalarticle {
-	visibility: hidden;
+	display: none;
 }
 
 .author {
@@ -64,9 +64,6 @@
 .flex-container {
 	visibility: hidden;
 }
-.footerheader {
-	font-size: ;
-}
 
 }
 
@@ -75,12 +72,11 @@
 		--root-size: 17px;
 		--padding-bottom: 40px;
 		--root-h2-size: 22px;
-		--margin-right-link: 40px;
+		--margin-right-link: 20px;
 		--root-size-h3: 18px;
 		--padding-left: 55px;
-		--padding-links-right: 595px;
+		--padding-links-right: 258px;
 		--line-height: 135%; 
-		--flex-container-padding-left: 50px;
 	 }
 	header {
 		display: grid;
@@ -128,9 +124,6 @@
 	#originalarticle {
 		text-align: center;
 		display: block;
-	}
-	.footerheader {
-		padding-left: 10.5%;
 	}
 	a {
 		margin-right: 20px;
@@ -249,7 +242,6 @@ button:active {
 	justify-content: space-evenly;
 	padding:20px;
 	padding-left: var(--flex-container-padding-left);
-	padding-right: var(--flex-container-padding-right);
 	flex-direction: row;
 	position: absolute;
 	z-index: 0;
@@ -257,37 +249,39 @@ button:active {
 	
 }
 .links {
-	padding-right: var(--padding-links-right);
+	padding-right: calc(var(--padding-links-right) * 2);
+	margin-left: var(--margin-left-links);
 
 }
 a {
-	margin-right: var(--margin-right-link);
+	margin-right: calc(var(--margin-right-link) * 1);
+	margin-left: var(margin);
+}
 #arrow {
 	color: #FFC72C;
 }
-mark {
-	animation-direction: normal;
-}
-
-
  /* Link to original article and footer section */
+
 #originalarticle {
 	color: #C1261A;
-	
 }
 footer {
-	background-color: var(--footer-background-color);
+	background-color:#0b0b0a;
 	padding: var(--footer-padding);
 	padding-top: calc(var(--padding-top-footer) * 3);
 	padding-bottom: calc(var(--padding-bottom) * 3);
 	font-family: "Libre Franklin", sans-serif ;
+	padding-left: 10.5%;
 }
-.footerheader {
-	color: var(--footer-color);
-}
+
 #yellowtext {
 	color: #FFC72C;
 }
 .footerheader {
-	font-size: calc(var(--footer-font-size) * 1.7);
+	font-size: calc(var(--footer-font-size) * 1.3);
+	color: var(--footer-color);
+}
+.footerheader2 {
+	font-size: calc(var(--footer-font-size) * 1.3);
+	color: #FFC72C;
 }
