--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 	--footer-color: #f7f7f5;
 	--article-padding-bottom: 30px;
 	--footer-padding: 20px;
+	--footer-padding-left: 16px;
 	--root-size-h1: 16px;
 	--root-size-h3: 16px;
 	--root-h2-size: 16px;
-	--footer-font-size: 16px;
+	--footer-font-size: 22px;
 	--flex-container-padding-left: 1px;
 	--flex-container-padding-right: 1px;
 	--article-margin: 15px;
@@ -75,8 +76,10 @@
 		--margin-right-link: 20px;
 		--root-size-h3: 18px;
 		--padding-left: 55px;
+		--footer-padding-left: 167px;
 		--padding-links-right: 258px;
 		--line-height: 135%; 
+		--footer-font-size: 30px;
 	 }
 	header {
 		display: grid;
@@ -201,11 +204,12 @@ section {
 	line-height: 150%;
 }
 .bigtextitalic {
-	padding: 5px;
-	font-size: calc(var(--root-size) * 1.3);
+	font-size: calc(var(--root-size) * 1.2);
 	font-family: "Public Sans", sans-serif;
 	font-weight:500;
 	font-style: italic;
+	background-color: #fff2d0;
+	padding: 12px;
 }
 sup {
 	color: #FFC72C;
@@ -267,21 +271,21 @@ a {
 }
 footer {
 	background-color:#0b0b0a;
-	padding: var(--footer-padding);
 	padding-top: calc(var(--padding-top-footer) * 3);
 	padding-bottom: calc(var(--padding-bottom) * 3);
 	font-family: "Libre Franklin", sans-serif ;
-	padding-left: 10.5%;
+	padding-left: var(--footer-padding-left);
 }
 
 #yellowtext {
 	color: #FFC72C;
 }
 .footerheader {
-	font-size: calc(var(--footer-font-size) * 1.3);
+	font-size: var(--footer-font-size);
 	color: var(--footer-color);
 }
 .footerheader2 {
-	font-size: calc(var(--footer-font-size) * 1.3);
+	font-family: "Libre Franklin", sans-serif;
+	font-size: calc(var(--footer-font-size) * 1.5);
 	color: #FFC72C;
 }
